<resources>
    <string name="app_name">Professor Notes</string>

    <string name="record_first_name_hint">FIRST NAME</string>
    <string name="record_last_name_hint">LAST NAME</string>
    <string name="record_course_hint">COURSE</string>
    <string name="record_notes_hint">NOTES</string>
    <string name="date_picker_label">Date of record:</string>
    <string name="record_dealt_with_label">Dealt With</string>

    <string name="record_list_title_text">First and Last Name</string>
    <string name="record_list_date_text">Date</string>
    <string name="dealt_with_icon_description">Icon to show whether a record has been dealt with.</string>
    <string name="delete_button_description">A delete button to delete a record permanently.</string>


    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about_message">
    This app was created for dedicated teachers and professors around the world!
    \n\nJust press the "plus" button to add a new student record. Your notes will automatically be saved and you can access them anytime.
    \n\nDeveloped by:\nSarah Cohen and Sarah Bracha Schuraytz</string>
    <string name="action_new_record">New Record</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d record(s)</string>

</resources>
