<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app= "http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/new_record"
        android:icon="@drawable/ic_add_white"
        android:title="@string/action_new_record"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom">

        <menu>
          <item
              android:id="@+id/action_toggle_subtitle"
              android:title="@string/show_subtitle"/>
        </menu>

    </item>

    <item android:id="@+id/about_page"
        android:icon="@drawable/ic_about"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>

</menu>